인프런 "스프링부트 JPA 강의 내용 정리"

--- a/spring/[Inflearn] SpringBoot+JPA/01 프로젝트 환경설정.md
+++ b/spring/[Inflearn] SpringBoot+JPA/01 프로젝트 환경설정.md
@@ -9,6 +9,92 @@
   * Spring Initializr 이라고도 하는 spring.io 에서 제공하는 프로젝트 생성 도구.
   * Dependencies 추가 항목 : web, thymeleaf, jpa, h2, lombok
 
+* Gradle 설정 추가
+  * 기본적인 gradle dependency 는 Spring Initializr에서 생성해주기는 하나, JUnit 4 를 사용하기 위해 아래 내용을 추가한다.
+  ```
+  dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	compileOnly 'org.projectlombok:lombok'
+	runtimeOnly 'com.h2database:h2'
+	annotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// JUnit 추가 
+	testImplementation("org.junit.vintage:junit-vintage-engine") {
+		exclude group: "org.hamcrest", module: "hamcrest-core"
+    }
+  }
+  ```
 ## 2. 라이브러리 살펴보기
 
 ---
+
+* 의존관계 확인하기
+```
+$ ./gradlew dependencies
+```
+
+## 3. View 환경 설정
+
+---
+
+* thymeleaf templete engine
+  * Server Side Templete Engine
+  * 공식 사이트: https://www.thymeleaf.org
+  * 스프링 공식 튜토리얼: https://spring.io/guides/gs/serving-web-content
+
+* HelloController.java ()
+```java
+@Controller
+public class HelloController {
+
+  @GetMapping("hello")
+  public String hello(Model model) {
+    model.addAttribute("data", "hello springboot");
+    return "hello";
+  }
+}
+```
+
+* hello.html (**resources/templates**)
+```html
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>Hello</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<body>
+<p th:text="'안녕하세요. ' + ${data}" >안녕하세요. 손님</p>
+</body>
+</html>
+```
+
+* index.html (**resources/static**)
+```html
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>Hello</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<body>
+Hello
+<a href="/hello">hello</a>
+</body>
+</html>
+```
+
+* 현재 View를 수정하더라도 서버를 재기동해야 수정된 View를 확인할 수 있는데, 이는 DevTools라는 라이브러리를 통해 해결이 가능하다.
+  gradle 파일에 아래 라이브러리를 추가하자.
+  ```
+  implementation 'org.springframework.boot:spring-boot-devtools'
+  ```
+  이렇게 설정한 후, 파일이 수정된 경우 build > recompile 을 하게 되면 수정 사항이 반영되는 것을 확인할 수 있다.
+
+## 4. H2 데이터베이스 설정
+
+---
+
+* 다운로드 URL: http://www.h2database.com
